objects/DlConfigObj151__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feild1__c</fullName>
        <label>Feild1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f1__c</fullName>
        <label>f1</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>DlConfigObj151</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DlConfigObj151 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DlConfigObj151s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>